@@ -13,6 +13,7 @@
 
 == Feedback
 
+- pickerel - https://github.com/pickerel
 - Gonzalo Suarez - parse_time_string(s) issue
 - Tony Day - http://github.com/tonyday - every and overlapping timeout issue
 - Nate Wiger (Schedulable call/trigger issue)
